// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivateRecipePanel activates basic recipe automatically and renders well-done page 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="scrollable-area content"
    >
      <h1>
        Well done!
      </h1>
      <img
        alt=""
        src="test-file-stub"
        width="300"
      />
      <div
        class="textContainer"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <div>
          is ready to use!
        </div>
        <br />
        <div>
          Go try it out now, or activate another mod.
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Ok
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateRecipePanel activates recipe with built-in services automatically and renders well-done page 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="scrollable-area content"
    >
      <h1>
        Well done!
      </h1>
      <img
        alt=""
        src="test-file-stub"
        width="300"
      />
      <div
        class="textContainer"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <div>
          is ready to use!
        </div>
        <br />
        <div>
          Go try it out now, or activate another mod.
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Ok
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateRecipePanel activates recipe with database preview automatically and renders well-done page 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="scrollable-area content"
    >
      <h1>
        Well done!
      </h1>
      <img
        alt=""
        src="test-file-stub"
        width="300"
      />
      <div
        class="textContainer"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <div>
          is ready to use!
        </div>
        <br />
        <div>
          Go try it out now, or activate another mod.
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Ok
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateRecipePanel renders well-done page for quick bar mod shortcut is configured on MacOS 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="scrollable-area content"
    >
      <h1>
        Well done!
      </h1>
      <img
        alt=""
        src="test-file-stub"
        width="300"
      />
      <div
        class="textContainer"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <div>
          is ready to use!
        </div>
        <br />
        <div>
          Launch it using your Quick Bar shortcut
        </div>
        <div
          class="shortcutContainer"
        >
          <span
            class="shortcutKey"
          >
            ⌘
          </span>
          <span>
              +  
          </span>
          <span
            class="shortcutKey"
          >
            M
          </span>
        </div>
        <a
          class="btn btn-link"
          href="chrome://extensions/shortcuts"
        >
          Change the Quick Bar shortcut.
        </a>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Ok
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateRecipePanel renders well-done page for quick bar mod shortcut is configured on Windows 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="scrollable-area content"
    >
      <h1>
        Well done!
      </h1>
      <img
        alt=""
        src="test-file-stub"
        width="300"
      />
      <div
        class="textContainer"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <div>
          is ready to use!
        </div>
        <br />
        <div>
          Launch it using your Quick Bar shortcut
        </div>
        <div
          class="shortcutContainer"
        >
          <span
            class="shortcutKey"
          >
            Ctrl
          </span>
          <span>
              +  
          </span>
          <span
            class="shortcutKey"
          >
            M
          </span>
        </div>
        <a
          class="btn btn-link"
          href="chrome://extensions/shortcuts"
        >
          Change the Quick Bar shortcut.
        </a>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Ok
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateRecipePanel renders well-done page for quick bar mod shortcut not configured 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="scrollable-area content"
    >
      <h1>
        Well done!
      </h1>
      <img
        alt=""
        src="test-file-stub"
        width="300"
      />
      <div
        class="textContainer"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <div>
          is ready to use!
        </div>
        <br />
        <span>
          Now just 
          <a
            class="configureLink btn btn-link"
            href="chrome://extensions/shortcuts"
          >
            Configure your Quick Bar shortcut
          </a>
           to access this mod.
        </span>
      </div>
    </div>
    <div
      class="footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Ok
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivateRecipePanel renders with options, permissions info 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <form
      class="form"
      novalidate=""
    >
      <div
        class="scrollable-area formBody"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <p>
          We're almost there. This mod has a few settings to configure before using. You can always change these later.
        </p>
        <div>
          <h4>
            Configure Mod
          </h4>
        </div>
        <div
          class="optionsBody col"
        >
          <div
            class="formGroup form-group row"
          >
            <label
              class="label form-label col-form-label col-xl-2 col-lg-3"
              for="optionsArgs.testDatabase"
            >
              Test Database
            </label>
            <div
              class="col-xl-10 col-lg-9"
            >
              <div
                class="root"
              >
                <div
                  class="field"
                >
                  <div
                    class=" css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class=" css-1s2u09g-control"
                    >
                      <div
                        class=" css-319lph-ValueContainer"
                      >
                        <div
                          class=" css-14el2xx-placeholder"
                          id="react-select-2-placeholder"
                        >
                          Select...
                        </div>
                        <div
                          class=" css-6j8wv5-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-2-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class=""
                            id="react-select-2-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class=" css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class=" css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class=" css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="optionsArgs.testDatabase"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="dropdown dropdown"
                  data-test-selected="Database"
                  data-testid="toggle-optionsArgs.testDatabase"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-link"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="symbol"
                    >
                      <test-file-stub
                        classname="root"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup form-group row"
          >
            <label
              class="label form-label col-form-label col-xl-2 col-lg-3"
              for="optionsArgs.bar"
            >
              bar
            </label>
            <div
              class="col-xl-10 col-lg-9"
            >
              <div
                class="root"
              >
                <div
                  class="field"
                >
                  <input
                    class="form-control"
                    id="optionsArgs.bar"
                    step=""
                    type="number"
                    value="0"
                  />
                </div>
                <div
                  class="dropdown dropdown"
                  data-test-selected="Number"
                  data-testid="toggle-optionsArgs.bar"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-link"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="symbol"
                    >
                      <test-file-stub
                        classname="root"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formGroup form-group row"
          >
            <label
              class="label form-label col-form-label col-xl-2 col-lg-3"
              for="optionsArgs.foo"
            >
              foo
            </label>
            <div
              class="col-xl-10 col-lg-9"
            >
              <div
                class="root"
              >
                <div
                  class="field"
                >
                  <textarea
                    class="form-control"
                    id="optionsArgs.foo"
                    name="optionsArgs.foo"
                    rows="1"
                  />
                </div>
                <div
                  class="dropdown dropdown"
                  data-test-selected="Text"
                  data-testid="toggle-optionsArgs.foo"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-link"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="symbol"
                    >
                      <test-file-stub
                        classname="root"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fade mt-3 alert alert-info show"
          role="alert"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-info-circle fa-w-16 "
            data-icon="info-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              fill="currentColor"
            />
          </svg>
           
          <span
            class="permissionsBold"
          >
            Pixiebrix needs some permissions.
          </span>
          <div
            class="my-2"
          >
            <img
              alt="Example Chrome permissions dialog"
              src="test-file-stub"
              width="300"
            />
          </div>
          <div>
            Without permissions, PixieBrix won't work. We'll ask for these in just a second.
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <button
          class="btn btn-outline-danger"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-primary"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-magic fa-w-16 "
            data-icon="magic"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 96l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zM80 160l26.66-53.33L160 80l-53.34-26.67L80 0 53.34 53.33 0 80l53.34 26.67L80 160zm352 128l-26.66 53.33L352 368l53.34 26.67L432 448l26.66-53.33L512 368l-53.34-26.67L432 288zm70.62-193.77L417.77 9.38C411.53 3.12 403.34 0 395.15 0c-8.19 0-16.38 3.12-22.63 9.38L9.38 372.52c-12.5 12.5-12.5 32.76 0 45.25l84.85 84.85c6.25 6.25 14.44 9.37 22.62 9.37 8.19 0 16.38-3.12 22.63-9.37l363.14-363.15c12.5-12.48 12.5-32.75 0-45.24zM359.45 203.46l-50.91-50.91 86.6-86.6 50.91 50.91-86.6 86.6z"
              fill="currentColor"
            />
          </svg>
           Finish Activating
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ActivateRecipePanel renders with service configuration if no built-in service configs available 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <form
      class="form"
      novalidate=""
    >
      <div
        class="scrollable-area formBody"
      >
        <div
          class="recipeName"
        >
          Test Mod
        </div>
        <p>
          We're almost there. This mod has a few settings to configure before using. You can always change these later.
        </p>
        <div
          class="mt-1"
        >
          <div>
            <h4>
              Integrations
            </h4>
          </div>
          <div>
            <div
              class="serviceCard card"
            >
              <div
                class="serviceCardHeader"
              >
                <code
                  class="serviceId"
                >
                  @pixiebrix/service1
                </code>
              </div>
              <div
                class="d-inline-flex justify-content-end"
              >
                <button
                  class="actionButton btn btn-info btn-sm"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-plus fa-w-14 "
                    data-icon="plus"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                      fill="currentColor"
                    />
                  </svg>
                   Configure
                </button>
                <button
                  class="actionButton btn btn-info btn-sm"
                  title="Refresh integration configurations"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-sync fa-w-16 "
                    data-icon="sync"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                      fill="currentColor"
                    />
                  </svg>
                   Refresh
                </button>
              </div>
            </div>
          </div>
          <div>
            <div
              class="serviceCard card"
            >
              <div
                class="serviceCardHeader"
              >
                <code
                  class="serviceId"
                >
                  @pixiebrix/service2
                </code>
              </div>
              <div
                class="d-inline-flex justify-content-end"
              >
                <button
                  class="actionButton btn btn-info btn-sm"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-plus fa-w-14 "
                    data-icon="plus"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                      fill="currentColor"
                    />
                  </svg>
                   Configure
                </button>
                <button
                  class="actionButton btn btn-info btn-sm"
                  title="Refresh integration configurations"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-sync fa-w-16 "
                    data-icon="sync"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                      fill="currentColor"
                    />
                  </svg>
                   Refresh
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <button
          class="btn btn-outline-danger"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn btn-primary"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-magic fa-w-16 "
            data-icon="magic"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 96l16-32 32-16-32-16-16-32-16 32-32 16 32 16 16 32zM80 160l26.66-53.33L160 80l-53.34-26.67L80 0 53.34 53.33 0 80l53.34 26.67L80 160zm352 128l-26.66 53.33L352 368l53.34 26.67L432 448l26.66-53.33L512 368l-53.34-26.67L432 288zm70.62-193.77L417.77 9.38C411.53 3.12 403.34 0 395.15 0c-8.19 0-16.38 3.12-22.63 9.38L9.38 372.52c-12.5 12.5-12.5 32.76 0 45.25l84.85 84.85c6.25 6.25 14.44 9.37 22.62 9.37 8.19 0 16.38-3.12 22.63-9.37l363.14-363.15c12.5-12.48 12.5-32.75 0-45.24zM359.45 203.46l-50.91-50.91 86.6-86.6 50.91 50.91-86.6 86.6z"
              fill="currentColor"
            />
          </svg>
           Finish Activating
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
